tests/negative/gold/abstractD-test.gold
tests/negative/abstractD-test.toit:8:7: error: Non-abstract class 'B' is missing implementations
class B extends A:
      ^
tests/negative/abstractD-test.toit:6:12: note: Method 'foo' is only partially implemented
  abstract foo x=unresolved
           ^~~
tests/negative/abstractD-test.toit:6:18: error: Unresolved identifier: 'unresolved'
  abstract foo x=unresolved
                 ^~~~~~~~~~
tests/negative/abstractD-test.toit:10:16: error: Unresolved identifier: 'unresolved'
    return x + unresolved
               ^~~~~~~~~~
Compilation failed
